src/main/default/objects/C501_Appointment_Scheduled__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments Scheduled</relationshipLabel>
    <relationshipName>Appointments_Scheduled</relationshipName>
    <type>Lookup</type>
</CustomField>