src/main/default/objects/C501_Appointment_Scheduled__c/fields/Appointment_Info__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Info__c</fullName>
    <formula>C501_Appointment__r.Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Info</label>
    <type>DateTime</type>
</CustomField>