src/main/default/objects/C501_Appointment_Scheduled__c/fields/C501_Appointment__c.field-meta.xml
<CustomField>
    <fullName>C501_Appointment__c</fullName>
    <label>Appointment</label>
    <referenceTo>C501_Appointment__c</referenceTo>
    <relationshipLabel>Appointments Scheduled</relationshipLabel>
    <relationshipName>Appointments_Scheduled</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>