src/main/default/objects/C501_Appointment_Scheduled__c/fields/C501_Contact__c.field-meta.xml
<CustomField>
    <fullName>C501_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments Scheduled</relationshipLabel>
    <relationshipName>Appointments_Scheduled</relationshipName>
    <type>Lookup</type>
</CustomField>