src/main/default/objects/C501_Appointment_Scheduled__c/fields/C501_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>C501_Time_Formula__c</fullName>
    <formula>TimeValue(C501_Appointment__r.Available_Time__c - (8/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Formula</label>
    <type>Time</type>
</CustomField>