src/main/default/objects/C501_Appointment_Scheduled__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact_Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>