src/main/default/objects/C501_Appointment_Scheduled__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32</length>
    <type>Text</type>
</CustomField>