src/main/default/objects/C501_Appointment_Scheduled__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>C501_Appointment__r.Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>