src/main/default/objects/C501_Appointment_Scheduled__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>