src/main/default/objects/C501_Appointment_Scheduled__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>C501_Contact__c</columns>
    <columns>Appointment_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Time__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>C501_Appointment__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>